A filter box for the search results page has been created. The click function of the filter box will be completed later and another version will be updated.

--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="dark_pink">#D93F63</color>
     <color name="green">#C5C442</color>
     <color name="teak">#88C4C4</color>
+    <color name="orange_button">#FFA500</color>
+    <color name="gray_button">#D3D3D3</color>
 </resources>
