--- a/src/app/src/main/res/layout/activity_home_page.xml
+++ b/src/app/src/main/res/layout/activity_home_page.xml
@@ -73,7 +73,7 @@
                     android:padding="10dp">
 
                     <ImageView
-                        android:id="@+id/imageView4"
+                        android:id="@+id/iconSearchDecoration"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -81,7 +81,7 @@
                         app:srcCompat="@drawable/icon_settings" />
 
                     <EditText
-                        android:id="@+id/editTextText"
+                        android:id="@+id/searchInputText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
