fix color naming error, modify UserPage layout

--- a/src/app/src/main/res/layout/activity_home_page.xml
+++ b/src/app/src/main/res/layout/activity_home_page.xml
@@ -92,7 +92,7 @@
                         android:inputType="text"
                         android:textAlignment="center"
                         android:textAllCaps="false"
-                        android:textColor="@color/lightblue"
+                        android:textColor="@color/light_blue"
                         android:textSize="18sp" />
 
                     <ImageView
