--- a/src/app/src/main/res/drawable/blue_button_background.xml
+++ b/src/app/src/main/res/drawable/blue_button_background.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="rectangle">
         <corners android:radius="50dp"/>
-        <solid android:color="@color/lightblue"/>
+        <solid android:color="@color/light_blue"/>
     </shape>
 </item>
 </selector>
