--- a/src/app/src/main/res/drawable/edittext_background.xml
+++ b/src/app/src/main/res/drawable/edittext_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <stroke android:color="@color/lightblue" android:width="1dp"/>
+        <stroke android:color="@color/light_blue" android:width="1dp"/>
         <corners android:radius="100dp"/>
     </shape>
 </item>
