--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lightblue">#A0E9FF</color>
+    <color name="light_blue">#A0E9FF</color>
     <color name="gray">#B5C0D0</color>
     <color name="red">#E78895</color>
     <color name="grey">#F5F5F5</color>
@@ -17,4 +17,5 @@
     <color name="teak">#88C4C4</color>
     <color name="orange_button">#FFA500</color>
     <color name="gray_button">#D3D3D3</color>
+    <color name="soft_black">#222831</color>
 </resources>
