Implement the parser

--- a/src/app/src/main/res/layout/activity_home_page.xml
+++ b/src/app/src/main/res/layout/activity_home_page.xml
@@ -43,9 +43,10 @@
                 android:id="@+id/btnLogout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/icon_logout"
-                tools:layout_editor_absoluteY="8dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/icon_logout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
