--- a/src/app/src/main/res/layout/activity_search_result_page.xml
+++ b/src/app/src/main/res/layout/activity_search_result_page.xml
@@ -58,6 +58,7 @@
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/scrollViewFilters"
         app:layout_constraintTop_toBottomOf="@id/btnBack">
 
         <LinearLayout
@@ -157,6 +158,15 @@
 
         </LinearLayout>
     </HorizontalScrollView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewProducts"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/scrollViewFilters"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
