Complete the interaction of the last button date listed on the search results page, and the search results page is basically completed.

--- a/src/app/src/main/res/layout/activity_search_result_page.xml
+++ b/src/app/src/main/res/layout/activity_search_result_page.xml
@@ -149,7 +149,7 @@
                     android:paddingTop="8dp"
                     android:paddingRight="4dp"
                     android:paddingBottom="8dp"
-                    android:text="Date listed just for test just for test" />
+                    android:text="Date listed" />
 
             </RelativeLayout>
 
