--- a/src/app/src/main/res/layout/activity_private_chat.xml
+++ b/src/app/src/main/res/layout/activity_private_chat.xml
@@ -24,11 +24,12 @@
             android:layout_centerVertical="true"/>
 
         <TextView
+            android:id="@+id/receiver_email_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="UserName"
+            android:text="receiver_email"
             android:textSize="26sp"
-            android:layout_toEndOf="@+id/chat_back_btn"
+            android:layout_toEndOf="@id/chat_back_btn"
             android:textColor="@color/dark_purple"
             android:textStyle="bold"
             android:layout_centerInParent="true"
