--- a/src/app/src/main/res/layout/activity_private_menu.xml
+++ b/src/app/src/main/res/layout/activity_private_menu.xml
@@ -25,17 +25,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:layout_editor_absoluteY="8dp" />
 
-            <ImageButton
-                android:id="@+id/btn_return_to_home"
+            <Button
+                android:id="@+id/open_message_test_btn"
                 android:layout_width="45dp"
-                android:layout_height="46dp"
-                android:layout_marginEnd="106dp"
-                android:background="#FEF7FF"
-                android:contentDescription="@string/btn_private_menu_return_des"
-                app:layout_constraintEnd_toStartOf="@+id/Messages"
-                app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@android:drawable/ic_menu_revert"
-                app:tint="#FA7070" />
+                android:layout_height="45dp"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ScrollView
