remove filter in homepage; add notification page

--- a/src/app/src/main/res/layout/activity_user_page.xml
+++ b/src/app/src/main/res/layout/activity_user_page.xml
@@ -184,7 +184,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:text="Message"
+                            android:text="Notifications"
                             android:textColor="@color/soft_black"
                             android:textSize="20sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -221,7 +221,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:text="Product"
+                            android:text="Products"
                             android:textSize="20dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/imageView16"
