--- a/src/app/src/main/res/layout/activity_home_page.xml
+++ b/src/app/src/main/res/layout/activity_home_page.xml
@@ -74,12 +74,12 @@
                     android:padding="10dp">
 
                     <ImageView
-                        android:id="@+id/iconSearchDecoration"
+                        android:id="@+id/btnNotification"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/grey_background"
-                        app:srcCompat="@drawable/icon_settings" />
+                        app:srcCompat="@drawable/icon_alert" />
 
                     <EditText
                         android:id="@+id/input"
@@ -93,7 +93,7 @@
                         android:inputType="text"
                         android:textAlignment="center"
                         android:textAllCaps="false"
-                        android:textColor="@color/light_blue"
+                        android:textColor="@color/soft_black"
                         android:textSize="18sp" />
 
                     <ImageView
@@ -106,99 +106,99 @@
 
                 </LinearLayout>
 
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_marginStart="12dp"-->
+<!--                    android:layout_marginTop="12dp"-->
+<!--                    android:layout_marginEnd="12dp"-->
+<!--                    android:background="@drawable/grey_background"-->
+<!--                    android:orientation="horizontal">-->
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="8dp"-->
+<!--                        android:layout_weight="0.333"-->
+<!--                        android:orientation="horizontal">-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/imageView8"-->
+<!--                            android:layout_width="50dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_gravity="center_vertical"-->
+<!--                            android:layout_marginStart="8dp"-->
+<!--                            android:layout_weight="1"-->
+<!--                            app:srcCompat="@drawable/icon_time" />-->
+
+<!--                        <Spinner-->
+<!--                            android:id="@+id/timeSpin"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="40dp"-->
+<!--                            android:layout_marginStart="4dp"-->
+<!--                            android:layout_weight="1"-->
+<!--                            android:background="@null" />-->
+<!--                    </LinearLayout>-->
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="4dp"-->
+<!--                        android:layout_marginEnd="4dp"-->
+<!--                        android:layout_weight="0.333"-->
+<!--                        android:orientation="horizontal">-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/imageView8_2"-->
+<!--                            android:layout_width="50dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_gravity="center_vertical"-->
+<!--                            android:layout_marginStart="8dp"-->
+<!--                            android:layout_weight="1"-->
+<!--                            app:srcCompat="@drawable/icon_price" />-->
+
+<!--                        <Spinner-->
+<!--                            android:id="@+id/priceSpin"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="40dp"-->
+<!--                            android:layout_marginStart="4dp"-->
+<!--                            android:layout_weight="1"-->
+<!--                            android:background="@null" />-->
+<!--                    </LinearLayout>-->
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="8dp"-->
+<!--                        android:layout_weight="0.333"-->
+<!--                        android:orientation="horizontal">-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/imageView8_3"-->
+<!--                            android:layout_width="60dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_gravity="center_vertical"-->
+<!--                            android:layout_marginStart="8dp"-->
+<!--                            android:layout_weight="1"-->
+<!--                            app:srcCompat="@drawable/icon_location" />-->
+
+<!--                        <Spinner-->
+<!--                            android:id="@+id/locationSpin"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="40dp"-->
+<!--                            android:layout_marginStart="4dp"-->
+<!--                            android:layout_weight="1"-->
+<!--                            android:background="@null" />-->
+
+<!--                    </LinearLayout>-->
+
+<!--                </LinearLayout>-->
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:background="@drawable/grey_background"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_weight="0.333"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/imageView8"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="8dp"
-                            android:layout_weight="1"
-                            app:srcCompat="@drawable/icon_time" />
-
-                        <Spinner
-                            android:id="@+id/timeSpin"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_marginStart="4dp"
-                            android:layout_weight="1"
-                            android:background="@null" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginEnd="4dp"
-                        android:layout_weight="0.333"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/imageView8_2"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="8dp"
-                            android:layout_weight="1"
-                            app:srcCompat="@drawable/icon_price" />
-
-                        <Spinner
-                            android:id="@+id/priceSpin"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_marginStart="4dp"
-                            android:layout_weight="1"
-                            android:background="@null" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_weight="0.333"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/imageView8_3"
-                            android:layout_width="60dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="8dp"
-                            android:layout_weight="1"
-                            app:srcCompat="@drawable/icon_location" />
-
-                        <Spinner
-                            android:id="@+id/locationSpin"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:layout_marginStart="4dp"
-                            android:layout_weight="1"
-                            android:background="@null" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="12dp"
                     android:orientation="horizontal">
 
@@ -243,7 +243,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="12dp"
                     android:layout_weight="0.333"
                     android:orientation="horizontal">
